@@ -1,3 +1,4 @@
+
 #!/bin/sh
 #
 # Copyright (C) 2022 The Android Open Source Project
@@ -67,7 +68,7 @@ STUDIO_JDK=""
 JDK_HOME=""
 JAVA_BIN="$JRE/bin/java"
 if [ -z "$JAVA_BIN" ] || [ ! -x "$JAVA_BIN" ]; then
-  message "ERROR: cannot start Android Studio. \nNo JRE found. Please make sure \$STUDIO_JDK, \$JDK_HOME, or \$JAVA_HOME point to valid JRE installation."
+  message "ERROR: cannot start Android Studio.\nNo JRE found. Please make sure \$STUDIO_JDK, \$JDK_HOME, or \$JAVA_HOME point to valid JRE installation."
   exit 1
 fi
 
@@ -84,7 +85,7 @@ VM_OPTIONS_FILE=""
 USER_VM_OPTIONS_FILE=""
 
 STUDIO_BIN="${IDE_BIN_HOME}/studio.sh"
-STUDIO_VERSION=$(cat ../product-info.json | grep AndroidStudio | awk '{ print $2}' | sed 's/"//' | sed 's/"//' | sed 's/,//')
+STUDIO_VERSION=$(cat "${IDE_HOME}/product-info.json" | grep AndroidStudio | awk '{ print $2 }' | sed 's/"//' | sed 's/"//' | sed 's/,//')
 STUDIO_CONFIG_DIR=${CONFIG_HOME}/Google/${STUDIO_VERSION}
 if [ ! -d "${STUDIO_CONFIG_DIR}" ]; then
   # Android Studio config is not set up
@@ -104,31 +105,31 @@ rm -rf ${STUDIO_SAFE_CONFIG_DIR}/idea.properties
 rm -rf ${STUDIO_SAFE_CONFIG_DIR}/studio64.vmoptions
 
 CLASS_PATH="$IDE_HOME/lib/platform-loader.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/intellij-coverage-agent-1.0.723.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/lib.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/util.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/grpc.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/opentelemetry.jar"
 CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/rd.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/intellij-test-discovery.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/util_rt.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/lib.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/groovy.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/error-prone-annotations.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/protobuf.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/idea_rt.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/annotations.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/bouncy-castle.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/external-system-rt.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/intellij-coverage-agent-1.0.744.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/externalProcess-rt.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/grpc.jar"
 CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/util-8.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/app.jar"
 CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/jps-model.jar"
 CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/stats.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/protobuf.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/external-system-rt.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/forms_rt.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/intellij-test-discovery.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/annotations.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/groovy.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/annotations-java5.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/byte-buddy-agent.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/error-prone-annotations.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/externalProcess-rt.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/idea_rt.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/junit4.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/bouncy-castle.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/app.jar"
 CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/resources.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/util_rt.jar"
-CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/ant/lib/ant.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/trove.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/junit4.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/forms_rt.jar"
+CLASS_PATH="$CLASS_PATH:$IDE_HOME/lib/util.jar"
+
 
 # ---------------------------------------------------------------------
 # Run the IDE.
@@ -141,7 +142,6 @@ exec "$JAVA_BIN" \
   "-XX:HeapDumpPath=$HOME/java_error_in_studio_.hprof" \
   "-Djb.vmOptionsFile=${USER_VM_OPTIONS_FILE:-${VM_OPTIONS_FILE}}" \
   ${IDE_PROPERTIES_PROPERTY} \
-  -Djava.system.class.loader=com.intellij.util.lang.PathClassLoader -Didea.strict.classpath=true -Didea.vendor.name=Google -Didea.paths.selector="${STUDIO_VERSION_SAFE}" -Didea.platform.prefix=AndroidStudio -XX:FlightRecorderOptions=stackdepth=256 -Didea.jre.check=true -Dsplash=true --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.nio.charset=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens=java.base/jdk.internal.vm=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.security.ssl=ALL-UNNAMED --add-opens=java.base/sun.security.util=ALL-UNNAMED --add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED --add-opens=java.desktop/java.awt=ALL-UNNAMED --add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED --add-opens=java.desktop/java.awt.event=ALL-UNNAMED --add-opens=java.desktop/java.awt.image=ALL-UNNAMED --add-opens=java.desktop/java.awt.peer=ALL-UNNAMED --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED --add-opens=java.desktop/javax.swing.text=ALL-UNNAMED --add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED --add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED --add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.desktop/sun.awt=ALL-UNNAMED --add-opens=java.desktop/sun.font=ALL-UNNAMED --add-opens=java.desktop/sun.java2d=ALL-UNNAMED --add-opens=java.desktop/sun.swing=ALL-UNNAMED --add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED \
+-Didea.paths.selector="${STUDIO_VERSION}.safe" -Dstudio.safe.mode=true -Djava.security.manager=allow -Didea.platform.prefix=AndroidStudio -Dsplash=true -Djna.nosys=true -Didea.vendor.name=Google -Daether.connector.resumeDownloads=false -Didea.required.plugins.id=org.jetbrains.kotlin -Djava.system.class.loader=com.intellij.util.lang.PathClassLoader -Dintellij.custom.startup.error.reporting.url=https://issuetracker.google.com/issues/new?component=192708 -Djna.noclasspath=true --add-opens=java.base/sun.nio.fs=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED "-Dpty4j.preferred.native.folder=$IDE_HOME/lib/pty4j" --add-opens=java.desktop/sun.awt=ALL-UNNAMED --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED --add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED --add-opens=java.desktop/sun.font=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.desktop/sun.java2d=ALL-UNNAMED --add-opens=java.desktop/java.awt=ALL-UNNAMED --add-opens=java.desktop/java.awt.image=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -XX:FlightRecorderOptions=stackdepth=256 --add-opens=java.base/java.nio.charset=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/sun.swing=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED "-Djna.boot.library.path=$IDE_HOME/lib/jna/amd64" --add-opens=java.desktop/java.awt.event=ALL-UNNAMED --add-opens=java.desktop/javax.swing.text=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED --add-opens=java.base/sun.security.util=ALL-UNNAMED --add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.net.dns=ALL-UNNAMED --add-opens=java.desktop/java.awt.peer=ALL-UNNAMED --add-opens=java.base/jdk.internal.vm=ALL-UNNAMED --add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED --add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED --add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED --add-opens=java.base/sun.security.ssl=ALL-UNNAMED --add-opens=java.base/java.lang.ref=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED \
   com.intellij.idea.Main \
   "$@" disableNonBundledPlugins dontReopenProjects
-
