@@ -1,3 +1,4 @@
+
 @ECHO OFF
 SETLOCAL
 
@@ -39,16 +40,13 @@ IF NOT "%STUDIO_PROPERTIES%" == "" SET IDE_PROPERTIES_PROPERTY="-Didea.propertie
 SET VM_OPTIONS_FILE=
 SET USER_VM_OPTIONS_FILE=
 
-SET STUDIO_VERSION=
-FOR /F "tokens=2 delims= " %%x in ('FINDSTR AndroidStudio "%IDE_HOME%\product-info.json"') do set STUDIO_VERSION=%%x
-SET STUDIO_VERSION=%STUDIO_VERSION:"=%
-SET STUDIO_VERSION=%STUDIO_VERSION:,=%
+SET STUDIO_VERSION=FOR /F "tokens=2 delims= " %%x in ('FINDSTR AndroidStudio "%IDE_HOME%\product-info.json"') do set STUDIO_VERSION=%%x
 
 SET BITS=64
 REG Query "HKLM\Hardware\Description\System\CentralProcessor\0" | FIND /i "x86" > NUL && SET BITS=
 SET STUDIO_EXE=%IDE_HOME%\bin\studio%BITS%.exe
 
-SET STUDIO_CONFIG_DIR="%APPDATA%\Google\%STUDIO_VERSION%\%"
+SET STUDIO_CONFIG_DIR="%APPDATA%\Google\%STUDIO_VERSION%\"
 IF NOT EXIST %STUDIO_CONFIG_DIR% (
   @REM Android Studio config is not set up
   ECHO Android Studio config doesn't exist %STUDIO_CONFIG_DIR%
@@ -56,7 +54,7 @@ IF NOT EXIST %STUDIO_CONFIG_DIR% (
   EXIT /B
 )
 
-SET STUDIO_SAFE_CONFIG_DIR="%APPDATA%\Google\%STUDIO_VERSION%.safe\%"
+SET STUDIO_SAFE_CONFIG_DIR="%APPDATA%\Google\%STUDIO_VERSION%.safe\"
 IF NOT EXIST %STUDIO_SAFE_CONFIG_DIR% (
   mkdir %STUDIO_SAFE_CONFIG_DIR%
   EXIT /B
@@ -70,32 +68,32 @@ USER_VM_OPTIONS_FILE=%APPDATA%\Google\%STUDIO_VERSION%.safe\studio64.exe.vmoptio
 SET ACC="-Djb.vmOptionsFile=%USER_VM_OPTIONS_FILE%"
 FINDSTR /R /C:"-XX:\+.*GC" "%USER_VM_OPTIONS_FILE%" > NUL
 
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\annotations-java5.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\util.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\externalProcess-rt.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\groovy.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\external-system-rt.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\resources.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\lib.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\intellij-coverage-agent-1.0.723.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\byte-buddy-agent.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\jps-model.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\ant/lib/ant.jar"
 SET "CLASS_PATH=%IDE_HOME%\lib\platform-loader.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\forms_rt.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\grpc.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\util_rt.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\bouncy-castle.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\idea_rt.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\app.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\junit4.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\util-8.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\annotations.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\intellij-test-discovery.jar"
-SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\error-prone-annotations.jar"
 SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\protobuf.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\trove.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\app.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\error-prone-annotations.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\util_rt.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\externalProcess-rt.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\util-8.jar"
 SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\rd.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\idea_rt.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\util.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\junit4.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\intellij-test-discovery.jar"
 SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\stats.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\groovy.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\resources.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\annotations.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\intellij-coverage-agent-1.0.744.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\opentelemetry.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\grpc.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\forms_rt.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\bouncy-castle.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\external-system-rt.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\lib.jar"
+SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\jps-model.jar"
+
 
 :: ---------------------------------------------------------------------
 :: Run the IDE.
@@ -106,6 +104,6 @@ SET "CLASS_PATH=%CLASS_PATH%;%IDE_HOME%\lib\stats.jar"
   "-XX:ErrorFile=%USERPROFILE%\java_error_in_studio_%%p.log" ^
   "-XX:HeapDumpPath=%USERPROFILE%\java_error_in_studio.hprof" ^
   %IDE_PROPERTIES_PROPERTY% ^
-  -Djava.system.class.loader=com.intellij.util.lang.PathClassLoader -Didea.strict.classpath=true -Didea.vendor.name=Google -Didea.paths.selector=%STUDIO_VERSION%.safe -Didea.platform.prefix=AndroidStudio -XX:FlightRecorderOptions=stackdepth=256 -Didea.jre.check=true -Dsplash=true --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.nio.charset=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens=java.base/jdk.internal.vm=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.security.ssl=ALL-UNNAMED --add-opens=java.base/sun.security.util=ALL-UNNAMED --add-opens=java.desktop/java.awt=ALL-UNNAMED --add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED --add-opens=java.desktop/java.awt.event=ALL-UNNAMED --add-opens=java.desktop/java.awt.image=ALL-UNNAMED --add-opens=java.desktop/java.awt.peer=ALL-UNNAMED --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED --add-opens=java.desktop/javax.swing.text=ALL-UNNAMED --add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED --add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED --add-opens=java.desktop/sun.awt=ALL-UNNAMED --add-opens=java.desktop/sun.font=ALL-UNNAMED --add-opens=java.desktop/sun.java2d=ALL-UNNAMED --add-opens=java.desktop/sun.swing=ALL-UNNAMED --add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED ^
+-Didea.paths.selector=%STUDIO_VERSION%.safe -Dstudio.safe.mode=true -Djava.security.manager=allow -Didea.platform.prefix=AndroidStudio -Dsplash=true -Djna.nosys=true -Didea.vendor.name=Google -Daether.connector.resumeDownloads=false -Didea.required.plugins.id=org.jetbrains.kotlin -Djava.system.class.loader=com.intellij.util.lang.PathClassLoader -Dintellij.custom.startup.error.reporting.url=https://issuetracker.google.com/issues/new?component=192708 -Djna.noclasspath=true --add-opens=java.base/sun.nio.fs=ALL-UNNAMED "-Djna.boot.library.path=%IDE_HOME%/lib/jna/amd64" --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.desktop/sun.awt=ALL-UNNAMED --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED "-Dpty4j.preferred.native.folder=%IDE_HOME%/lib/pty4j" --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED --add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED --add-opens=java.desktop/sun.font=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.desktop/sun.java2d=ALL-UNNAMED --add-opens=java.desktop/java.awt=ALL-UNNAMED --add-opens=java.desktop/java.awt.image=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -XX:FlightRecorderOptions=stackdepth=256 --add-opens=java.base/java.nio.charset=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/sun.swing=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=java.desktop/java.awt.event=ALL-UNNAMED --add-opens=java.desktop/javax.swing.text=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED --add-opens=java.base/sun.security.util=ALL-UNNAMED --add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED ^ --add-opens=java.base/sun.net.dns=ALL-UNNAMED --add-opens=java.desktop/java.awt.peer=ALL-UNNAMED --add-opens=java.base/jdk.internal.vm=ALL-UNNAMED --add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED --add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED --add-opens=java.base/sun.security.ssl=ALL-UNNAMED --add-opens=java.base/java.lang.ref=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED ^
   com.intellij.idea.Main ^
   %* disableNonBundledPlugins dontReopenProjects
